--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,14 +7,16 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+  <div id="header">
+    <img id="icono" src="assets/img/icono-travel.png" />
+    <img src="assets/img/logotipo-travel.png" />
+    <h1 class="titulo">Juntos llegamos</h1>
+    <h1 id="masLejos"class="titulo">mas lejos</h1>
   </div>
+ 
+  <form id="form">
+   <h3 class="regular">¿Ya tienes una cuenta?</h3>
+   <app-button routerLink="/login" texto="Iniciar sesión"></app-button>
+   <ion-button id="btn-registrar" class="regular" expand="block" shape="round" fill="outline" routerLink="/register">Registrate</ion-button>
+  </form>
 </ion-content>
